--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3'
 services:
   postgresdb:
     image: postgres
@@ -13,7 +12,6 @@ services:
       - $DB_PORT:$DB_PORT
     volumes:
     - db:/var/lib/postgres
-
 
   api:
     depends_on:
@@ -37,6 +35,8 @@ services:
     tty: true
     volumes:
       - .:/usr/src/app
+      - ./data:/usr/src/app/data
+    command: npm run start:dev
 
 volumes: 
   db:
